fix spacing in code blocks

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -36,7 +36,7 @@ h3 code {
   color: rgba(219, 39, 119, var(--tw-text-opacity));
 }
 
-pre.hljs {
+code.hljs {
   background-color: #282828;
   border-radius: 0.25rem;
   margin-bottom: 1.5rem;;
